# pipeline_opt

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  pyrightconfig.json
.github/workflows/: tests.yaml
src/pipeline_opt/: __init__.py  create_random.py  error_messages.py
tests/: test_make_estimator.py  test_make_random_col_trans.py  test_make_random_estimator.py  test_make_random_union.py  test_make_random_voting.py
tests/test_confs/: default.yaml
tests/test_confs/encoders/: estimators.yaml
tests/test_confs/feature_selection/: estimators.yaml
tests/test_confs/make_estimator/: estimators.yaml
tests/test_confs/make_random_estimator/: estimators.yaml
tests/test_confs/models/: estimators.yaml
tests/test_confs/scalers/: estimators.yaml
